--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -33,9 +33,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bender, Version=3.0.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Bender.3.0.4.0\lib\Bender.dll</HintPath>
+    <Reference Include="Bender, Version=3.0.40.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bender.3.0.40.0\lib\Bender.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Bottles, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
